# GestureRecognitionHMM

./: .gitignore  README.md  pipeline.sh  pyproject.toml
data/processed_test/: test1.npz  test2.npz  test3.npz  test4.npz  test5.npz  test6.npz  test7.npz  test8.npz
data/processed_train/: beat3_01.npz  beat3_02.npz  beat3_03.npz  beat3_06.npz  beat3_08.npz  beat3_31.npz  beat4_01.npz  beat4_03.npz  beat4_05.npz  beat4_08.npz  beat4_09.npz  beat4_31.npz  circle12.npz  circle13.npz  circle14.npz  circle17.npz  circle18.npz  circle31.npz  eight01.npz  eight02.npz  eight04.npz  eight07.npz  eight08.npz  eight31.npz  inf11.npz  inf112.npz  inf13.npz  inf16.npz  inf18.npz  inf31.npz  wave01.npz  wave02.npz  wave03.npz  wave05.npz  wave07.npz
data/processed_val/: beat3_01.npz  beat3_02.npz  beat3_03.npz  beat3_06.npz  beat4_05.npz  beat4_09.npz  circle13.npz  circle18.npz  eight02.npz  eight07.npz  inf18.npz  wave03.npz
models/: BEAT3_HMM.npz  BEAT4_HMM.npz  CIRCLE_HMM.npz  EIGHT_HMM.npz  INFINITY_HMM.npz  WAVE_HMM.npz
models_full_train/: BEAT3_HMM.npz  BEAT4_HMM.npz  CIRCLE_HMM.npz  INFINITY_HMM.npz  WAVE_HMM.npz
outputs/testing_logs/: testing_log
outputs/training_logs/: HMMs.txt  training_log
scripts/: config.py  evaluate_hmm.py  implement_HMM.ipynb  partition_preprocess.py  process_test.py  reset_models.py  testing.ipynb  train_hmm.py  visualize_quantize.ipynb
src/: gesture.py  gesture_from_path.py  kalman.py  load_seqs_by_label.py
src/HMM/: HMM.py  classify.py
tests/: test_HMM.ipynb  testing.ipynb  visualize_quantize.ipynb
